--- a/src/app/@modules/home/components/administrador/quantitativo-dados-clinica/quantitativo-dados-clinica.component.html
+++ b/src/app/@modules/home/components/administrador/quantitativo-dados-clinica/quantitativo-dados-clinica.component.html
@@ -13,7 +13,7 @@
       <div class="card-body">
         <div class="row m-0">
           <div class="col-sm-8">
-            <h1 class="m-0 title1">{{ pendente?.quantidade }}</h1>
+            <h1 class="m-0 title1">{{ pendente?.quantidade ? pendente?.quantidade : 0 }}</h1>
             <span class="subtitle d-block">Total Geral</span>
           </div>
           <div class="col-4 d-flex align-items-center justify-content-center">
@@ -44,7 +44,7 @@
       <div class="card-body">
         <div class="row m-0">
           <div class="col-sm-8">
-            <h1 class="m-0 title2">{{ emAndamento?.quantidade }}</h1>
+            <h1 class="m-0 title2">{{ emAndamento?.quantidade ? emAndamento?.quantidade : 0 }}</h1>
             <span class="subtitle d-block">Total Geral</span>
           </div>
           <div class="col-4 d-flex align-items-center justify-content-center">
@@ -75,7 +75,7 @@
       <div class="card-body">
         <div class="row m-0">
           <div class="col-sm-8">
-            <h1 class="m-0 title3">{{ cancelada?.quantidade }}</h1>
+            <h1 class="m-0 title3">{{ cancelada?.quantidade ? cancelada?.quantidade : 0 }}</h1>
             <span class="subtitle d-block">Total Geral</span>
           </div>
           <div class="col-4 d-flex align-items-center justify-content-center">
@@ -106,7 +106,7 @@
       <div class="card-body">
         <div class="row m-0">
           <div class="col-sm-8">
-            <h1 class="m-0 title4">{{ finalizada?.quantidade }}</h1>
+            <h1 class="m-0 title4">{{ finalizada?.quantidade ? finalizada?.quantidade : 0 }}</h1>
             <span class="subtitle d-block">Total Geral</span>
           </div>
           <div class="col-4 d-flex align-items-center justify-content-center">
