--- a/src/app/@modules/perfil/components/form-update-medico/form-update-medico.component.html
+++ b/src/app/@modules/perfil/components/form-update-medico/form-update-medico.component.html
@@ -25,13 +25,13 @@
                 <li>
                   <span
                     ><strong>Horário de Entrada:</strong>
-                    {{ dadosUser?.medico?.crm !== null ? dadosUser?.medico?.crm : 'sem registro' }}</span
+                    {{ dadosUser?.medico?.hrEntrada !== null ? dadosUser?.medico?.hrEntrada : 'sem registro' }}</span
                   >
                 </li>
                 <li>
                   <span
                     ><strong>Horário de Saída:</strong>
-                    {{ dadosUser?.medico?.crm !== null ? dadosUser?.medico?.crm : 'sem registro' }}</span
+                    {{ dadosUser?.medico?.hrSaida !== null ? dadosUser?.medico?.hrSaida : 'sem registro' }}</span
                   >
                 </li>
                 <li>
