--- a/src/app/@modules/paciente/components/table-medico/table-medico.component.html
+++ b/src/app/@modules/paciente/components/table-medico/table-medico.component.html
@@ -84,7 +84,7 @@
       </tbody>
     </table>
   </div>
-  <div class="col-12 d-flex justify-content-center">
+  <div class="col-12 d-flex justify-content-center" *ngIf="!loading && consultas.length > 0">
     <pagination-controls
       (pageChange)="pageChanged($event)"
       maxSize="5"
