--- a/src/app/@modules/home/components/charts/estatisticas-paciente/estatisticas-paciente.component.html
+++ b/src/app/@modules/home/components/charts/estatisticas-paciente/estatisticas-paciente.component.html
@@ -1,6 +1,6 @@
 <div class="row m-0">
   <div class="col-12">
-    <h3 class="my-2">Quantitativo Consultas</h3>
+    <h3 class="my-2">Quantitativos</h3>
   </div>
   <div class="col-md-6 col-12 pt-3 pt-md-0">
     <app-card-content
