--- a/src/app/@modules/home/components/paciente/tabela-diagnosticos-data/tabela-diagnosticos-data.component.html
+++ b/src/app/@modules/home/components/paciente/tabela-diagnosticos-data/tabela-diagnosticos-data.component.html
@@ -7,7 +7,7 @@
           <tr>
             <th scope="col">#</th>
             <th scope="col">Procedimento</th>
-            <th scope="col">Dignóstico</th>
+            <th scope="col">Diagnóstico</th>
             <th scope="col">Data</th>
           </tr>
         </thead>
