--- a/src/app/@modules/configuracoes/components/form-dados-clinica/form-dados-clinica.component.html
+++ b/src/app/@modules/configuracoes/components/form-dados-clinica/form-dados-clinica.component.html
@@ -104,7 +104,7 @@
                 bindValue="abbreviation"
                 appearance="outline"
                 formControlName="noEstado"
-                placeholder="Selecione"
+                placeholder="UF"
               >
               </ng-select>
             </div>
