--- a/src/app/@modules/paciente/components/prontuario-medico-paciente/prontuario-medico-paciente.component.html
+++ b/src/app/@modules/paciente/components/prontuario-medico-paciente/prontuario-medico-paciente.component.html
@@ -108,7 +108,7 @@
         </div>
         <div class="col-md-12">
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Dignóstico</mat-label>
+            <mat-label>Diagnóstico</mat-label>
             <textarea
               formControlName="diagnostico"
               matInput
