--- a/src/app/@modules/home/components/paciente/box-info-paciente/box-info-paciente.component.html
+++ b/src/app/@modules/home/components/paciente/box-info-paciente/box-info-paciente.component.html
@@ -18,7 +18,7 @@
         </div>
         <div class="col-auto pb-3 description">
           <span>Peso</span>
-          <h4 class="m-0">{{ dadosMedicos?.peso ? dadosMedicos?.peso : '--' }} kl</h4>
+          <h4 class="m-0">{{ dadosMedicos?.peso ? dadosMedicos?.peso : '--' }} kg</h4>
         </div>
         <div class="col-auto pb-3 description">
           <span>Tipo sanguíneo</span>
