--- a/src/app/@modules/protuario-medico/components/detalhes-prontuario/detalhes-prontuario.component.html
+++ b/src/app/@modules/protuario-medico/components/detalhes-prontuario/detalhes-prontuario.component.html
@@ -106,7 +106,7 @@
       </div>
       <div class="col-md-12">
         <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Diagnostico</mat-label>
+          <mat-label>Diagnóstico</mat-label>
           <textarea
             [value]="
               prontuarioSelecionado?.prontuario?.diagnostico
@@ -115,7 +115,7 @@
             "
             matInput
             disabled
-            placeholder="Diagnostico médico"
+            placeholder="Diagnóstico médico"
             autocomplete="off"
             rows="5"
           ></textarea>
