--- a/src/app/@modules/perfil/components/update-dados-medicos/update-dados-medicos.component.html
+++ b/src/app/@modules/perfil/components/update-dados-medicos/update-dados-medicos.component.html
@@ -13,7 +13,7 @@
           <ul class="detalhes">
             <li>
               <span>
-                <strong>Tipo Sanguineo:</strong>
+                <strong>Tipo Sanguíneo:</strong>
                 {{
                   dadosMedicos?.tipoSanguineo?.descricaoTipoSanguineo !== null
                     ? dadosMedicos?.tipoSanguineo?.descricaoTipoSanguineo
@@ -43,79 +43,13 @@
             </li>
             <li>
               <span>
-                <strong>Descrição:</strong>
+                <strong>Descrição do IMC:</strong>
                 {{ dadosMedicos?.descImc !== null ? dadosMedicos?.descImc : 'sem registro' }}
               </span>
             </li>
           </ul>
         </div>
       </div>
-      <!-- <div class="row">
-        <div class="col-12 d-flex justify-content-between align-items-center mb-3">
-          <h3 class="m-0">Detalhes</h3>
-        </div>
-
-        <div class="col-12">
-          <mat-accordion class="">
-            <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)" hideToggle>
-              <mat-expansion-panel-header>
-                <mat-panel-title>
-                  <strong>Alergias</strong>
-                </mat-panel-title>
-                <mat-panel-description>
-
-                </mat-panel-description>
-              </mat-expansion-panel-header>
-              <ul *ngIf="alergias.length > 0; else semregistro">
-                <li *ngFor="let alergia of alergias">
-                  <span>{{ alergia?.descAlergia }}</span>
-                </li>
-              </ul>
-              <mat-action-row>
-                <button mat-button color="primary" (click)="nextStep()">próximo</button>
-              </mat-action-row>
-            </mat-expansion-panel>
-
-            <mat-expansion-panel [expanded]="step === 1" (opened)="setStep(1)" hideToggle>
-              <mat-expansion-panel-header>
-                <mat-panel-title>
-                  <strong>Medicamentos</strong>
-                </mat-panel-title>
-                <mat-panel-description>
-                </mat-panel-description>
-              </mat-expansion-panel-header>
-              <ul *ngIf="medicamentos.length > 0; else semregistro">
-                <li *ngFor="let medicamento of medicamentos">
-                  <span>{{ medicamento?.descMedicamento }}</span>
-                </li>
-              </ul>
-              <mat-action-row>
-                <button mat-button color="warn" (click)="prevStep()">voltar</button>
-                <button mat-button color="primary" (click)="nextStep()">próximo</button>
-              </mat-action-row>
-            </mat-expansion-panel>
-
-            <mat-expansion-panel [expanded]="step === 2" (opened)="setStep(2)" hideToggle>
-              <mat-expansion-panel-header>
-                <mat-panel-title>
-                  <strong>Doenças crônicas</strong>
-                </mat-panel-title>
-                <mat-panel-description>
-                </mat-panel-description>
-              </mat-expansion-panel-header>
-              <ul *ngIf="doencasCronicas.length > 0; else semregistro">
-                <li *ngFor="let cronica of doencasCronicas">
-                  <span>{{ cronica?.descDoenca }}</span>
-                </li>
-              </ul>
-              <mat-action-row>
-                <button mat-button color="warn" (click)="prevStep()">voltar</button>
-                <button mat-button color="primary" (click)="nextStep()">fechar</button>
-              </mat-action-row>
-            </mat-expansion-panel>
-          </mat-accordion>
-        </div>
-      </div> -->
     </app-card-content>
   </div>
   <div class="col-12 col-md-4" style="height: 300px">
@@ -131,7 +65,7 @@
         <div class="row m-0 dados-medicos">
           <div class="col-12">
             <mat-form-field appearance="outline" class="w-100">
-              <mat-label>Tipo Sanguineo</mat-label>
+              <mat-label>Tipo Sanguíneo</mat-label>
               <mat-select formControlName="tipoSanguineo">
                 <mat-option [value]="tipo.id" *ngFor="let tipo of tiposSanguineo"
                   >{{ tipo?.descricaoTipoSanguineo }}
